# call-tracking-calendar

./: .env.template  .gitignore  CLAUDE.md  LEARN.md  README.md  TODO.md  entitlements.plist  launcher.py  launcher_sync.py  pyproject.toml  requirements.txt
docs/: apple-developer-setup.md  oauth-verification.md
resources/: Info.plist  launchagent.plist
scripts/: build.sh  build_unsigned.sh  create_dmg.sh  notarize.sh
src/: __init__.py  call_database.py  contacts.py  google_calendar.py  launchagent.py  main.py  permissions.py  sync_database.py  sync_service.py
src/ui/: __init__.py  preferences.py  setup_wizard.py
tests/: __init__.py  test_call_database.py  test_contacts.py  test_google_calendar.py  test_sync_database.py  test_sync_service.py
tests/fixtures/: sample_calls.db
